--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
       <version>9.0-801.jdbc4</version>
     </dependency>
       <dependency>
-          <groupId>org.codehaus.jackson</groupId>
-          <artifactId>jackson-mapper-asl</artifactId>
-          <version>1.9.13</version>
+          <groupId>org.json</groupId>
+          <artifactId>json</artifactId>
+          <version>20140107</version>
       </dependency>
       <dependency>
           <groupId>org.apache.httpcomponents</groupId>
@@ -38,6 +38,10 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
+          <configuration>
+              <source>1.7</source>
+              <target>1.7</target>
+          </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
