--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
           <artifactId>httpclient</artifactId>
           <version>4.3.3</version>
       </dependency>
+      <dependency>
+          <groupId>joda-time</groupId>
+          <artifactId>joda-time</artifactId>
+          <version>2.1</version>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
